# lunar-date

./: .build.yml  .clang-format  .docker-build.yml  .editorconfig  .travis.yml  AUTHORS  CNAME  ChangeLog  ChangeLog.pre-2-2  INSTALL  INSTALL.in  Makefile.am  Makefile.decl  NEWS  PKGBUILD  PKGBUILD.linux  README  README.md  README.rst  api.md  autogen.sh  class.Date.html  classes_hierarchy.html  configure.ac  const.DATE_MAJOR_VERSION.html  const.DATE_MICRO_VERSION.html  const.DATE_MINOR_VERSION.html  ctor.Date.new.html  error.DateError.html  func.DATE_CHECK_VERSION.html  func.init.html  index.html  index.json  index.md  libgcl-1.pc.in  liblunar-1.0.pc.in  liblunar-1.pc.in  liblunar-date-1.0.pc  liblunar-date-1.0.pc.in  liblunar-date-2.0.pc.in  (+30 more)
.github/workflows/: archlinux.sh  builds.sh  builds.yml  debian.sh  fedora.sh  release.py  release.yml  ubuntu.sh
bindings/python/: Makefile.am  README  calendar.defs  calendar.override  date.defs  date.override  gcl-demo.py  gclmodule.c  lunar-demo.py  lunarcalendar.defs  lunarcalendar.override  lunardate-demo.py  lunardate.override  lunarmodule.c
cross/: mingw.txt
data/: Makefile.am  PKGBUILD.linux  chinese-vacation.py  holiday.desktop  holiday.zh_CN  holiday.zh_HK  holiday.zh_TW  huangli.js  jieri.table  table.toml  table2code.py
date/: lunar-config.h.in  lunar-date-private.c  lunar-date.c  lunar.h
debian/: changelog.in  control  libgcl-bin.install  liblunar-doc.install  rules
docs/: lunar-date-docs.xml  lunar-date.toml.in  meson.build  urlmap.js
docs/reference/: Makefile.am  gcl-docs.sgml  gcl-sections.txt  lunar-calendar-docs.sgml  lunar-calendar-sections.txt  lunar-calendar.types  lunar-calendar3-sections.txt  lunar-date-docs.sgml  lunar-date-docs.xml  lunar-date-sections.txt  lunar-date.types  lunar-docs.sgml  lunar-gtk-docs.sgml  lunar-gtk.types  lunar-sections.txt  meson.build  version.xml.in
docs/reference/tmpl/: gcl-unused.sgml  gclcalendar.sgml  gcldate.sgml  gclmain.sgml  lunar-calendar.sgml  lunar-date.sgml  lunar-misc.sgml  lunar-unused.sgml  lunarcalendar.sgml  lunardate.sgml  lunarmain.sgml
example/: Makefile.am  calendar.vala  config.vapi  example.js  example.py  example.vala  gjs.js  javascript.js  lunardate.vala  python-binding.py  python.py  seed.js
gcl/: Makefile.am  calendar.patch  gcl-calendar.c  gcl-calendar.h  gcl-date.c  gcl-date.h  gcl.h
liblunar/: Makefile.am  NEWS  README  README.in  autogen.sh  configure.ac  liblunar-1.pc.in  liblunar-1.vapi  sanity_check
liblunar-gtk/: ChangeLog  INSTALL.in  Makefile.am  NEWS  README.in  autogen.sh  configure.ac  lunar-calendar.c  sanity_check
liblunar-gtk/bindings/python/: Makefile.am  lunar-demo.py  lunarmodule.c
liblunar-gtk/docs/reference/: Makefile.am  lunar-gtk-docs.sgml  lunar-gtk-sections.txt
liblunar-gtk/docs/reference/tmpl/: lunar-calendar.sgml
liblunar-gtk/example/: javascript.js  python.py
liblunar-gtk/lunar-gtk/: Makefile.am  liblunar-gtk-preload.c  lunar-calendar.c  lunar.h
liblunar-gtk/tests/: Makefile.am  calendar.vala  test-calendar.c  testcalendar.c
liblunar/bindings/: Makefile.am
liblunar/bindings/python/: Makefile.am  __init__.py  gdate.h  lunardate-demo.py  lunardate.defs  lunarmodule.c
liblunar/data/: Makefile.am
liblunar/debian/: copyright  liblunar0.install  rules
liblunar/docs/reference/: lunar-docs.sgml  lunar-sections.txt  lunar.types  version.xml.in
liblunar/docs/reference/tmpl/: lunar-date.sgml  lunar-misc.sgml  lunar-unused.sgml  lunardate.sgml  lunarmain.sgml
liblunar/example/: python-binding.py
liblunar/lunar/: Makefile.am  calendar.patch  lunar-calendar.h  lunar-date-private.c  lunar-date-private.h  lunar-date.c  lunar-date.h  lunar-enum-types.h.template  lunar-main.c  lunar-main.h
liblunar/po/: LINGUAS  POTFILES.in  zh_CN.po  zh_HK.po  zh_TW.po
liblunar/tests/: Makefile.am  test-date.c  vala-date.vala
lunar/: Makefile.am  calendar.patch  lunar-calendar.c  lunar-date-private.c  lunar-date-private.h  lunar-date.c  lunar-date.h  lunar-enum-types.c.template  lunar-enum-types.h.template  lunar-main.c  lunar-main.h  lunar.h  update-calendar.sh
lunar-calendar/: Makefile.am  calendar.h  lunar-calendar-preload.c  lunar-calendar.c  lunar-calendar.h  lunar.h
lunar-date/: LunarDate-3.0.metadata  Makefile.am  abicheck.sh  date.h  lunar-config.h.in  lunar-date-enum-types.c.template  lunar-date-private.c  lunar-date-private.h  lunar-date-utils.c  lunar-date-utils.h  lunar-date-version.c  lunar-date-version.h.in  lunar-date-win32.rc.in  lunar-date.c  lunar-date.gresource.xml  lunar-date.h  lunar-date.rc.in  lunar-date.symbols  lunar-main.c  lunar-main.h  lunar-version.c  lunar-version.h.in  meson.build
lunar-gtk/: Makefile.am  liblunar-gtk-preload.c  lunar-calendar.c  lunar-calendar.h
po/: ChangeLog  LINGUAS  POTFILES.in  POTFILES.skip  meson.build  zh_CN.po  zh_HK.po  zh_TW.po
references/: LunarDate.html  annotation-glossary.html  api-index-2.4.0.html  api-index-3.0.0.html  api-index-full.html  ch01.html  index.html  lunar-date-Version-Information.html  lunar-date.devhelp2
service/: .Makefile.am.swp  Makefile.am  date-daemon.c  date-daemon.h  lunar-date-daemon.c  lunar-date.c  meson.build  org.chinese.Lunar.Date.service.in  org.chinese.lunar.date.xml  org.date.lunar.xml
src/: lunar-calendar.c
tests/: Makefile.am  meson.build  test-calendar.c  test-date.c  test.c  testing.c
utils/: Makefile.am  test-date
utils/.libs/: lt-test-date  test-date
vala/: Makefile.am
vapi/: Makefile.am  lunar-calendar-1.0.vapi  lunar-calendar-2.0.deps  lunar-calendar-3.0.deps  lunar-date-3.0.vapi  meson.build
